--- a/styles/main.css
+++ b/styles/main.css
@@ -4641,7 +4641,7 @@ Created using IcoMoon - icomoon.io
 
 .card {
   border: 0;
-  border-radius: 0.1875rem;
+  border-radius: 50px;
   display: inline-block;
   position: relative;
   overflow: hidden;
