--- a/styles/main.css
+++ b/styles/main.css
@@ -7111,14 +7111,16 @@ Created using IcoMoon - icomoon.io
 
 .cc-profile-image a {
   position: relative;
+  height: 240px;
+  width: 240px;
 }
 
 .cc-profile-image a:before {
   content: "";
   border: 15px solid rgba(55, 140, 63, 0.6);
   border-radius: 50%;
-  height: 180px;
-  width: 180px;
+  height: 300px;
+  width: 300px;
   position: absolute;
   left: 0;
   -webkit-animation: pulsate 1.6s ease-out;
@@ -7132,8 +7134,8 @@ Created using IcoMoon - icomoon.io
 .cc-profile-image img {
   position: relative;
   border-radius: 50%;
-  height: 180px;
-  width: 180px;
+  height: 300px;
+  width: 300px;
   padding: 0;
   margin: 0;
   border: 15px solid transparent;
@@ -7452,4 +7454,9 @@ a#menu-share:hover > i{
 @keyframes rotate-out {
   from {transform: rotate(360deg);}
   to {transform: rotate(0deg);}
+}
+.hide{display:none;}
+label {
+  width:200px;
+  display: inline-block;
 }
